src/test/ui/borrowck/borrowck-partial-reinit-3.stderr
error[E0383]: partial reinitialization of uninitialized structure `x.0`
  --> $DIR/borrowck-partial-reinit-3.rs:11:5
   |
LL |     x.0.f = 3;
   |     ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0383`.
